complete/env/deployment.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: app-deployment
spec:
  replicas: 1
  selector:
    name: app-deployment
  strategy:
    type: Rolling
    rollingParams:
  template:
    metadata:
      labels:
        name: app-deployment
    spec:
      containers:
      - image: "172.30.1.1:5000/test/application-image:latest"
        imagePullPolicy: IfNotPresent
        name: application 
        readinessProbe:
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
  triggers:
  - type: ConfigChange
