complete/env/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: application   
spec:
  selector:                  
    name: app-deployment
  ports:
  - nodePort: 0
    port: 8080               
    protocol: TCP
    targetPort: 8080
