complete/env/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: app
spec:
  host: application-test.192.168.99.101.nip.io
  to:
    kind: Service
    name: application
